added ueth stub

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,3 +21,4 @@ add_subdirectory(liburlp)
 add_subdirectory(libusys)
 add_subdirectory(libucrypto)
 add_subdirectory(libup2p)
+add_subdirectory(libueth)
