refactor stubs, added test

--- a/libup2p/CMakeLists.txt
+++ b/libup2p/CMakeLists.txt
@@ -5,11 +5,12 @@ set(sources
 	rlpx_devp2p.c
 	rlpx_frame.c
 	rlpx_handshake.c
-	rlpx_kademlia.c
+	kademlia/ktable.c
 	rlpx_node.c
 	rlpx_protocol.c
 	rlpx_test_helpers.c)
 set(headers
+	kademlia/ktable.h
 	rlpx_channel.h
 	rlpx_config.h
 	rlpx_config_unix.h
@@ -17,7 +18,6 @@ set(headers
 	rlpx_frame.h
 	rlpx_handshake.h
 	rlpx_helper_macros.h
-	rlpx_kademlia.h
 	rlpx_node.h
 	rlpx_protocol.h
 	rlpx_test_helpers.h
