refactor app to use ueth

--- a/apps/pingpong/CMakeLists.txt
+++ b/apps/pingpong/CMakeLists.txt
@@ -1,3 +1,3 @@
 add_executable(pingpong main.c)
-target_link_libraries(pingpong up2p usys ucrypto urlp)
+target_link_libraries(pingpong ueth up2p usys ucrypto urlp)
 install(TARGETS pingpong DESTINATION ${UETH_INSTALL_ROOT}/bin)
