refactor io passes test

--- a/libup2p/CMakeLists.txt
+++ b/libup2p/CMakeLists.txt
@@ -47,13 +47,12 @@ add_library(up2p ${sources} ${headers})
 target_link_libraries(up2p usys ucrypto urlp)
 target_include_directories(up2p PUBLIC ./)
 
-#####TODO TESTING
-######unit test for libup2p
-#####add_executable(up2p_unit_test 
-#####	${sources-unit-test}
-#####	${headers-unit-test})
-#####target_link_libraries(up2p_unit_test up2p)
-#####
+#unit test for libup2p
+add_executable(up2p_unit_test 
+	${sources-unit-test}
+	${headers-unit-test})
+target_link_libraries(up2p_unit_test up2p)
+
 #integration test for libup2p
 add_executable(up2p_integration_test 
 	${sources-integration-test}
@@ -61,7 +60,7 @@ add_executable(up2p_integration_test
 target_link_libraries(up2p_integration_test up2p)
 
 # install unit test
-install(TARGETS up2p_integration_test
+install(TARGETS up2p_integration_test up2p_unit_test
 	DESTINATION ${UETH_INSTALL_ROOT}/bin)
 
 #
