--- a/libup2p/CMakeLists.txt
+++ b/libup2p/CMakeLists.txt
@@ -2,7 +2,7 @@
 set(sources
 	rlpx_io.c
 	rlpx_io_devp2p.c
-	rlpx_discovery.c
+	rlpx_io_discovery.c
 	rlpx_frame.c
 	rlpx_handshake.c
 	kademlia/ktable.c
@@ -14,7 +14,7 @@ set(headers
 	rlpx_config.h
 	rlpx_config_unix.h
 	rlpx_io_devp2p.h
-	rlpx_discovery.h
+	rlpx_io_discovery.h
 	rlpx_frame.h
 	rlpx_handshake.h
 	rlpx_helper_macros.h
