--- a/libusys/CMakeLists.txt
+++ b/libusys/CMakeLists.txt
@@ -13,6 +13,7 @@ set(sources
 	)
 set(headers 
 	./async/async_io.h
+	./utimers.h
 	)
 list(APPEND sources 
 	./${USYS_DIR}/usys_signals.c 
@@ -24,7 +25,6 @@ list(APPEND headers
 	./${USYS_DIR}/usys_io.h 
 	./${USYS_DIR}/usys_log.h 
 	./${USYS_DIR}/usys_time.h 
-	./${USYS_DIR}/usys_timers.h 
 	./${USYS_DIR}/usys_config.h 
 	./${USYS_DIR}/usys_config_unix.h)
 
@@ -33,6 +33,7 @@ add_library(usys ${sources} ${headers})
 target_link_libraries(usys klib)
 target_include_directories(usys PUBLIC ./${USYS_DIR})
 target_include_directories(usys PUBLIC ./async)
+target_include_directories(usys PUBLIC ./)
 
 #unit test for libusys
 add_executable(usys_unit_test 
